--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -3,8 +3,8 @@
     height: 100%;
   }
   
-.navber {
-    height: vh;
+  .navbar {
+    margin-bottom: 0px !important;
 }
   .navbar-toggler {
     padding-top: 8px;
@@ -85,7 +85,7 @@
   }
   
   .logo {
-    height: 6rem;
+    height: 4rem;
     width: 8rem;
     -o-object-fit: contain;
     object-fit: contain;
